# interview-prep

./: .gitignore  DESIGN.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
coach/: __init__.py  cli.py  config.py  pii.py  schemas.py  server.py
coach/evaluate/: __init__.py  calibrate.py  claim_check.py  sql_sandbox.py
coach/ingest/: __init__.py  chunk.py  extract.py  run.py
coach/interview/: __init__.py  graph.py  prober.py  rounds.py
coach/knowledge/: __init__.py  grow.py  public_kb.py
coach/llm/: __init__.py  gateway.py
coach/memory/: __init__.py  fold.py  placeholders.py  store.py  tidal.py
coach/resume/: __init__.py  analyze.py  benchmark.py  optimize.py  parse.py
coach/retrieval/: __init__.py  embed.py  geodesic.py  hybrid.py  rerank.py  retriever.py
coach/review/: __init__.py  export.py  gap.py  quality_gate.py  sm2.py
coach/storage/: __init__.py  checkpointer.py  sqlite.py  vector.py
tests/: conftest.py  test_cli.py  test_evaluate.py  test_export.py  test_gateway.py  test_ingest.py  test_interview.py  test_knowledge.py  test_memory.py  test_pii.py  test_resume.py  test_retrieval.py  test_retriever.py  test_review.py  test_server.py  test_storage.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue
web/src/api/: client.js
web/src/components/: AnswerInput.vue  ChatBubble.vue  ConversationStream.vue  ScoreCard.vue  WeakpointHeatmap.vue
web/src/router/: index.js
web/src/stores/: interview.js  memory.js  resume.js  review.js
web/src/views/: InterviewView.vue  MemoryView.vue  (+2 more)
